<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/magnet"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/header">

        <ImageButton
            android:id="@+id/home_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_home_24"
            android:contentDescription="@string/cd_home"
            android:background="@color/header"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:paddingBottom="15dp"
            android:layout_weight="1"
            android:color="@color/text"/>

        <TextView
            android:id="@+id/headerText"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:background="@color/header"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="28"
            android:padding="17dp"
            android:text="@string/sensor_magnet_title"
            android:textColor="@color/text"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/notification_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/outline_circle_notifications_24"
            android:background="@color/header"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:paddingBottom="15dp"
            android:layout_weight="1"
            android:color="@color/text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/outline_reset_focus_24"
                android:background="@color/background"
                android:layout_marginStart="10dp"
                android:paddingTop="3dp"
                android:id="@+id/resetX"
                />

            <Spinner
                android:id="@+id/spinner_timeframe"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:background="@color/button"
                android:spinnerMode="dropdown"
                android:popupBackground="@color/header" />

        </LinearLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lineChartMagnetX"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="8dp"/>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lineChartMagnetY"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="8dp" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lineChartMagnetZ"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp">

            <CheckBox
                android:id="@+id/cbChartX"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="X axis"
                android:textColor="@color/text"
                android:checked="true"/>

            <CheckBox
                android:id="@+id/cbChartY"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Y axis"
                android:textColor="@color/text"
                android:checked="true"/>

            <CheckBox
                android:id="@+id/cbChartZ"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Z axis"
                android:textColor="@color/text"
                android:checked="true"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/footerBar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/header">

        <TextView
            android:id="@+id/gyroDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_nav_gyro"
            android:textColor="@color/text"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btnPrevGyro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="&lt;"
            android:textColor="@color/background"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/button"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnNextAccel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="&gt;"
            android:textColor="@color/background"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/button"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/btnGyro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_nav_acc"
            android:textColor="@color/text"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textSize="20sp"/>
    </LinearLayout>
</LinearLayout>
